--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 .navbar {
     color: white;
     background: #1f2937;
-    height: 80px;
+    height: 40px;
 }
 
 .navbar .container {
@@ -38,7 +38,7 @@ body {
 
 .navbar ul {
     display: flex;
-    gap: 30px;
+    gap: 55px;
     list-style: none;
 }
 
@@ -63,7 +63,8 @@ body {
 
 .header .left_container {
     display: block;
-    padding: 20px;
+    padding: 40px;
+    margin:20px;
     align-items: center;
 }
 
@@ -78,15 +79,30 @@ body {
     border-radius: 35px;
 }
 
+.header button {
+    margin: 20px 0px;
+    color: white;
+    background-color: transparent;
+    border-radius: 5px;
+    padding: 4px 18px;
+    border: 2px solid white;
+    font-size: large;
+}
+
+.header button:hover {
+    background-color: #3b495c;
+    
+}
+
 .card_container {
     color: black;
     display: block;
-    
+    min-height: 350px;
 }
 
 .card_container .card_title {
     text-align: center;
-    padding: 20px;
+    padding: 30px;
 }
 
 .cards {
@@ -107,4 +123,75 @@ body {
 .card_container .cards img {
     width: 100px;
 
+}
+
+.quote_container {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #e5e7eb;
+    min-height: 150px;
+    padding: 20px 40px;
+}
+
+.quote_container .the_quote {
+    display: block;
+    font-size: larger;
+    font-weight: bold;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.quote_container .signature {
+    font-style: italic;
+    font-weight: lighter;
+    display: block;
+    text-align: center;
+}
+
+.action {
+    display: flex;
+    min-height: 200px;
+    align-items: center;
+    justify-content: center;   
+}
+
+.action_container {
+    display: flex;
+    align-items: center;
+    background-color: #3882f6;
+    justify-content: space-between;
+    border-radius: 6px;
+    height: 100px;
+    padding: 0px 80px;
+    width: 800px;
+    color: white;
+}
+
+.action_button button{
+    color: white;
+    background-color: transparent;
+    border-radius: 5px;
+    padding: 6px 24px;
+    border: 2px solid white;
+    font-size: large;
+}
+
+.action_button button:hover {
+    background-color: #5b96f6;
+}
+
+.footer {
+    display: flex;
+    background-color: #1f2937;
+    min-height: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer p {
+    color: white;
+    text-align: center;
 }
